--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <!--NAVBAR-->
       <nav>
         <a href="./index.html" class="active">Home</a>
-        <a href="./cart.html">Cart: <span>0</span></a>
+        <a href="./cart.html">Cart: <span id="Silver">0</span></a>
       </nav>
-      
+
       <!--PRODUCTS SECTION-->
       <section class="products" id="products">
         <div class="product">
@@ -28,12 +28,12 @@
             />
           </div>
 
-          <div class="product__name">Computer</div>
+          <div id="product__name">Computer</div>
           <div class="product__rate">
             <span>*</span><span>*</span><span>*</span><span>*</span>
           </div>
           <div class="product__price">R <span>2000</span></div>
-          <button>+ ADD TO CART</button>
+          <button onclick="cartAdd()">+ ADD TO CART</button>
         </div>
       </section>
       <br><br>
