everything are fixed into html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <!--NAVBAR-->
       <nav>
         <a href="./index.html" class="active">Home</a>
-        <a href="./cart.html">Cart: <span id="Silver">0</span></a>
+        <a href="./cart.html">Cart: <span id="count">0</span></a>
+        <a href="./cart.html">Balance: <span id="picture">0</span></a>
       </nav>
 
       <!--PRODUCTS SECTION-->
@@ -39,10 +40,7 @@
       <br><br>
       <hr>
       <br>
-      <h2 class="cart">Cart items here...</h2>
-    </div>
-  
-
+      <div class="products" id="select"></div>
     
     <!--JAVASCRIPT-->
     <script src="./script.js"></script>
